# tsp-ga

./: .gitignore  README.md  pyproject.toml
scripts/: application.py  test.py
tests/: test_tsp_ga.py
tests/dataset/: test_dataset.py  test_preprocessors.py
tests/engine/: test_engine.py
tsp_ga/core/: summary.py
tsp_ga/dataset/: __init__.py  preprocessors.py  types.py
tsp_ga/engine/: __init__.py  types.py
