[tool.poetry]
name = "tsp-ga"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.scripts]
test = 'scripts.test:run_test_pipeline'

[tool.poetry.dependencies]
python = "^3.8"
PyLin = "^0.2.7"
pylint = "^2.6.0"
requests = "^2.25.1"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
